--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
   font-family: sans-serif;
 }
 body{
-  background: linear-gradient(180deg, rgb(0, 0, 0) 25%, rgb(168, 10, 10) 75%);
+  background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@ body{
   display: none;
 }
 .container{
-  background-color: rgb(109, 3, 3);
+  background-color:  linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 100%);
   box-shadow: rgba(0,0, 0, 0.24) 0px 3px 8px;
   padding: 2rem;
   color: #fdfdfd;
